--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,11 +93,13 @@ set(CMAKE_DEBUG_POSTFIX "_d")
 
 include(ConfigureCCache)
 
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "lib")
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "lib")
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin")
-set(CMAKE_INSTALL_INCLUDEDIR "include")
-set(UNIT_TEST_BIN_OUTPUT_DIR "include")
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+#set(CMAKE_INSTALL_LIBDIR "lib")
+#set(CMAKE_INSTALL_BINDIR "bin")
+#set(CMAKE_INSTALL_INCLUDEDIR "include")
+set(UNIT_TEST_BIN_OUTPUT_DIR "${CMAKE_BINARY_DIR}/include")
 #set(CTEST_BINARY_DIRECTORY ${CMAKE_BINARY_DIR}/tests)
 
 #set(AUTOGEN_BUILD_DIR "auto_gen")
