--- a/lib/python/CMakeLists.txt
+++ b/lib/python/CMakeLists.txt
@@ -59,12 +59,28 @@ set_target_properties(function_binding_c PROPERTIES
     PUBLIC_HEADER "${HEADERS}"
 )
 
-install(TARGETS function_binding class_binding function_binding_c
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+install(TARGETS function_binding
+#    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} # Nedd more 1 target
-    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} # Nedd more 1 target
+#    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} # Nedd more 1 target
+#    PRIVATE_HEADER DESTINATION source
+#    PUBLIC_HEADER DESTINATION "include/${PROJECT_NAME}"
+)
+
+install(TARGETS function_binding_c
+#    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} # Nedd more 1 target
+#    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} # Nedd more 1 target
 #    PRIVATE_HEADER DESTINATION source
     PUBLIC_HEADER DESTINATION "include/${PROJECT_NAME}"
+)
+
+install(TARGETS class_binding
+#    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} # Nedd more 1 target
+#    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} # Nedd more 1 target
+#    PRIVATE_HEADER DESTINATION source
+#    PUBLIC_HEADER DESTINATION "include/${PROJECT_NAME}"
 )
 
 install(FILES
