--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,7 +78,7 @@ endif()
 set(BUILD_TESTING ON)
 # If enable coverage
 set(CODE_COVERAGE OFF)
-set(BUILD_DOCS_DOXYGEN OFF)
+set(BUILD_DOCS_DOXYGEN ON)
 set(BUILD_ARDUINO ON)
 
 if (CMAKE_BUILD_TYPE)
