--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "theme/doxygen-awesome-css"]
 	path = theme/doxygen-awesome-css
 	url = https://github.com/jothepro/doxygen-awesome-css.git
+[submodule "lib/ArduinoLinux"]
+	path = lib/ArduinoLinux
+	url = https://github.com/Bensuperpc/ArduinoLinux.git
