--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,19 @@
+version: 1.0.{build}
+
+branches:
+  # whitelist
+  only:
+    - master
+
+  # blacklist
+  except:
+    - dev
+
 image: Ubuntu2004
 
+platform: Any CPU
+
+configuration: Release
+
 build_script:
-  - cd %APPVEYOR_BUILD_FOLDER%
-  - dir
   - ./make.sh -DCMAKE_BUILD_TYPE=Release -DBUILD_DOCS_DOXYGEN=OFF
