--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -422,8 +422,13 @@ set_target_properties(bench_crc32 PROPERTIES AUTOUIC OFF AUTOMOC OFF AUTORCC OFF
 
 if(Boost_FOUND)
     add_executable(gta_sa_cheat ${GTA_SA_CHEAT})
-    target_link_libraries(gta_sa_cheat PRIVATE string_lib time OpenMP::OpenMP_CXX)
-    add_dependencies(gta_sa_cheat string_lib time OpenMP::OpenMP_CXX)
+    if(OpenMP_FOUND)
+        target_link_libraries(gta_sa_cheat PRIVATE string_lib time OpenMP::OpenMP_CXX)
+        add_dependencies(gta_sa_cheat string_lib time OpenMP::OpenMP_CXX)
+    else()
+        target_link_libraries(gta_sa_cheat PRIVATE string_lib time)
+        add_dependencies(gta_sa_cheat string_lib time)
+    endif()
     set_target_properties(gta_sa_cheat PROPERTIES AUTOUIC OFF AUTOMOC OFF AUTORCC OFF)
 
     add_executable(list_all_file ${LIST_ALL_FILE})
@@ -462,8 +467,13 @@ set_target_properties(parse_csv PROPERTIES AUTOUIC OFF AUTOMOC OFF AUTORCC OFF)
 
 if (OPENSSL_FOUND)
     add_executable(list_all_file_hash ${LIST_ALL_FILE_HASH})
-    target_link_libraries(list_all_file_hash PRIVATE ${Boost_LIBRARIES} ${OPENSSL_LIBRARIES} my_crypto OpenMP::OpenMP_CXX time)
-    add_dependencies(list_all_file_hash my_crypto OpenMP::OpenMP_CXX time)
+    if(OpenMP_FOUND)
+        target_link_libraries(list_all_file_hash PRIVATE ${Boost_LIBRARIES} ${OPENSSL_LIBRARIES} my_crypto OpenMP::OpenMP_CXX time)
+        add_dependencies(list_all_file_hash my_crypto OpenMP::OpenMP_CXX time)
+    else()
+        target_link_libraries(list_all_file_hash PRIVATE ${Boost_LIBRARIES} ${OPENSSL_LIBRARIES} my_crypto time)
+        add_dependencies(list_all_file_hash my_crypto time)
+    endif()
     set_target_properties(list_all_file_hash PROPERTIES AUTOUIC OFF AUTOMOC OFF AUTORCC OFF)
 
     add_executable(crypto_AES ${CRYPTO_AES})
