--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -54,8 +54,8 @@ jobs:
     - name: Build
       working-directory: ${{github.workspace}}/build
       shell: bash
-      # Execute the build.  You can specify a specific target with "--target <NAME>"
-      run: cmake --build . --config $BUILD_TYPE --parallel
+      # Execute the build.  You can specify a specific target with "--target <NAME>" --parallel
+      run: cmake --build . --config $BUILD_TYPE
 
     - name: Test
       working-directory: ${{github.workspace}}/build
