--- a/lib/CUDA/CMakeLists.txt
+++ b/lib/CUDA/CMakeLists.txt
@@ -149,7 +149,14 @@ else()
 endif()
 
 #set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} ")
-target_compile_options(my_cuda PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:--threads 0 
+set(CMAKE_CUDA_FLAGS_LOC " ${CMAKE_CUDA_FLAGS_LOC}")
+
+#if(CUDA_VERSION VERSION_GREATER_EQUAL "11.2")
+#    --threads 0
+#endif()
+
+
+target_compile_options(my_cuda PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:
     -O3 -Wall -Wextra -pipe #--std=c++14
     -Xptxas -O2 --default-stream per-thread
     -Xcompiler=-Wall -Xcompiler=-fopenmp -Xcompiler=-Wextra
