--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,14 +19,14 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-        - { name: Windows VS2017, os: windows-2016   }
-        - { name: Windows VS2019, os: windows-latest }
+        #- { name: Windows VS2017, os: windows-2016   }
+        #- { name: Windows VS2019, os: windows-latest }
         - { name: Linux GCC,      os: ubuntu-latest  }
         - { name: Linux Clang,    os: ubuntu-latest, flags: -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ }
-        - { name: MacOS XCode,    os: macos-latest   }
-        #config:
-        #- { name: Shared, flags: -DBUILD_SHARED_LIBS=TRUE }
-        #- { name: Static, flags: -DBUILD_SHARED_LIBS=FALSE }
+        #- { name: MacOS XCode,    os: macos-latest   }
+        config:
+        - { name: Shared, flags: -DBUILD_SHARED_LIBS=TRUE }
+        - { name: Static, flags: -DBUILD_SHARED_LIBS=FALSE }
 
     steps:
     - name: Checkout Code
