--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,8 +25,11 @@ jobs:
         - { name: Linux Clang,    os: ubuntu-latest, flags: -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ }
         #- { name: MacOS XCode,    os: macos-latest   }
         config:
-        - { name: Shared, flags: -DBUILD_SHARED_LIBS=TRUE }
-        - { name: Static, flags: -DBUILD_SHARED_LIBS=FALSE }
+        - { name: Release, flags: -DCMAKE_BUILD_TYPE=Release }
+        - { name: Debug, flags: -DCMAKE_BUILD_TYPE=Debug }
+        - { name: MinSizeRel, flags: -DCMAKE_BUILD_TYPE=MinSizeRel }
+        #- { name: Shared, flags: -DBUILD_SHARED_LIBS=TRUE }
+        #- { name: Static, flags: -DBUILD_SHARED_LIBS=FALSE }
 
     steps:
     - name: Checkout Code
@@ -48,8 +51,8 @@ jobs:
       working-directory: ${{github.workspace}}/build
       # Note the current convention is to use the -S and -B options here to specify source 
       # and build directories, but this is only available with CMake 3.13 and higher.  
-      # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
-      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+      # The CMake binaries on the Github Actions machines are (as of this writing) 3.12 -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+      run: cmake $GITHUB_WORKSPACE
 
     - name: Build
       working-directory: ${{github.workspace}}/build
